# nomenclator

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  PI_EXTENSION_FIXES.md  PI_EXTENSION_SUMMARY.md  PROMPT.md  RALPH_V2_FIXES.md  RALPH_WATCH_READY.md  activity.md  answers.md  fly.toml  prd.md  ralph-analyze.sh  ralph-status.sh  ralph-v2.sh  ralph-watch.sh  ralph.sh  solution-overview.md  test-ralph-watch.sh
backend/: .env.example  conftest.py  pyproject.toml
backend/app/: db.py  main.py  pricing.py  settings.py
backend/app/anthropic/: __init__.py  client.py  dry_run.py  models.py  request_builder.py  response_parser.py  review.py  tool_schema.py
backend/app/api/: auth.py  errors.py  health.py  jobs.py  logging_mw.py  spend.py
backend/app/auth/: config.py  middleware.py  passwords.py  rate_limit.py  sessions.py
backend/app/cluster/: __init__.py  embeddings.py  pipeline.py  similarity.py  unionfind.py
backend/app/csv_io/: dedup.py  exporter.py  ingest.py  normalize.py  parser.py  subset.py
backend/app/dao/: batch_requests.py  batches.py  clusters.py  embeddings_cache.py  job_rows.py  jobs.py  sessions.py  spend_log.py  task_templates.py
backend/app/jobs/: estimator.py  service.py  state_machine.py
backend/app/migrations/: 001_initial.sql  002_seed_prompt.sql  003_job_embeddings.sql
backend/app/worker/: poller.py
backend/tests/: conftest.py  test_db.py  test_db_dependency.py  test_input_cargos.csv  test_pricing.py  test_seed_prompt.py  test_smoke.py
backend/tests/anthropic/: __init__.py  fake_client.py  test_client.py  (+8 more)
(+208 files in other folders)
